// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F0WizardSteps Snapshot - multiple steps at first step 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
  testID="wizard"
>
  <View
    style={
      {
        "gap": 12,
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      accessibilityRole="progressbar"
      accessibilityValue={
        {
          "max": 3,
          "min": 0,
          "now": 1,
        }
      }
      accessible={true}
      className="w-full flex-row items-center gap-2"
    >
      <View
        className="flex-1 rounded-full"
      >
        <View
          className="h-1 w-full overflow-hidden rounded-full bg-f0-foreground"
        />
      </View>
      <View
        className="flex-1 rounded-full"
      >
        <View
          className="h-1 w-full overflow-hidden rounded-full bg-f0-background-tertiary"
        />
      </View>
      <View
        className="flex-1 rounded-full"
      >
        <View
          className="h-1 w-full overflow-hidden rounded-full bg-f0-background-tertiary"
        />
      </View>
    </View>
    <View
      style={
        {
          "paddingTop": 4,
        }
      }
    >
      <Text
        className="no-underline normal-case text-[20px] leading-[28px] tracking-[-0.2px] font-semibold text-f0-foreground text-left"
      >
        Title 1
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "padding": 16,
        }
      }
      keyboardShouldPersistTaps="handled"
      testID="wizard-content"
    >
      <View>
        <Text
          testID="content-0"
        >
          Content 
          1
        </Text>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "paddingBottom": 16,
        "paddingHorizontal": 16,
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        className="flex flex-1"
      >
        <View
          accessibilityLabel="Back, disabled"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="overflow-hidden"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
              undefined,
            ]
          }
          testID="wizard-back-button"
        >
          <View
            className="absolute inset-0"
            pointerEvents="none"
            style={
              [
                {
                  "opacity": 0,
                },
                {
                  "backgroundColor": "rgba(0, 0, 0, 1)",
                },
              ]
            }
          />
          <View
            className="relative flex-row items-center justify-center border-none grow-0 bg-f0-background-inverse-secondary border border-f0-border h-9 rounded opacity-50 gap-1 px-2 sm:px-3 lg:px-4"
          >
            <View
              className="opacity-100"
              testID="f0-button-content"
            >
              <View
                className="flex-row items-center justify-center gap-1"
              >
                <Text
                  className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
                >
                  Back
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        className="flex flex-1"
      >
        <View
          accessibilityLabel="Next"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="overflow-hidden"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
              undefined,
            ]
          }
          testID="wizard-next-button"
        >
          <View
            className="absolute inset-0"
            pointerEvents="none"
            style={
              [
                {
                  "opacity": 0,
                },
                {
                  "backgroundColor": "rgba(0, 0, 0, 1)",
                },
              ]
            }
          />
          <View
            className="relative flex-row items-center justify-center border-none grow-0 bg-f0-background-accent-bold h-9 rounded gap-1 px-2 sm:px-3 lg:px-4"
          >
            <View
              className="opacity-100"
              testID="f0-button-content"
            >
              <View
                className="flex-row items-center justify-center gap-1"
              >
                <Text
                  className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-inverse text-left"
                >
                  Next
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`F0WizardSteps Snapshot - single step 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
  testID="wizard"
>
  <View
    style={
      {
        "gap": 12,
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      accessibilityRole="progressbar"
      accessibilityValue={
        {
          "max": 1,
          "min": 0,
          "now": 1,
        }
      }
      accessible={true}
      className="w-full flex-row items-center gap-2"
    >
      <View
        className="flex-1 rounded-full"
      >
        <View
          className="h-1 w-full overflow-hidden rounded-full bg-f0-foreground"
        />
      </View>
    </View>
    <View
      style={
        {
          "paddingTop": 4,
        }
      }
    >
      <Text
        className="no-underline normal-case text-[20px] leading-[28px] tracking-[-0.2px] font-semibold text-f0-foreground text-left"
      >
        Title 1
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "padding": 16,
        }
      }
      keyboardShouldPersistTaps="handled"
      testID="wizard-content"
    >
      <View>
        <Text
          testID="content-0"
        >
          Content 
          1
        </Text>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "paddingBottom": 16,
        "paddingHorizontal": 16,
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        className="flex flex-1"
      >
        <View
          accessibilityLabel="Back, disabled"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="overflow-hidden"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
              undefined,
            ]
          }
          testID="wizard-back-button"
        >
          <View
            className="absolute inset-0"
            pointerEvents="none"
            style={
              [
                {
                  "opacity": 0,
                },
                {
                  "backgroundColor": "rgba(0, 0, 0, 1)",
                },
              ]
            }
          />
          <View
            className="relative flex-row items-center justify-center border-none grow-0 bg-f0-background-inverse-secondary border border-f0-border h-9 rounded opacity-50 gap-1 px-2 sm:px-3 lg:px-4"
          >
            <View
              className="opacity-100"
              testID="f0-button-content"
            >
              <View
                className="flex-row items-center justify-center gap-1"
              >
                <Text
                  className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
                >
                  Back
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        className="flex flex-1"
      >
        <View
          accessibilityLabel="Submit"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="overflow-hidden"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
              undefined,
            ]
          }
          testID="wizard-next-button"
        >
          <View
            className="absolute inset-0"
            pointerEvents="none"
            style={
              [
                {
                  "opacity": 0,
                },
                {
                  "backgroundColor": "rgba(0, 0, 0, 1)",
                },
              ]
            }
          />
          <View
            className="relative flex-row items-center justify-center border-none grow-0 bg-f0-background-accent-bold h-9 rounded gap-1 px-2 sm:px-3 lg:px-4"
          >
            <View
              className="opacity-100"
              testID="f0-button-content"
            >
              <View
                className="flex-row items-center justify-center gap-1"
              >
                <Text
                  className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-inverse text-left"
                >
                  Submit
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
